PubyParser.py
# Generated from Puby.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PubyParser ( Parser ):

    grammarFileName = "Puby.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'='", "'('", "')'", "'if'", "'elsif'", 
                     "'else'", "'end'", "'while'", "'for'", "'in'", "'do'", 
                     "'puts'", "'gets'", "'not'", "'and'", "'or'", "'&&'", 
                     "'||'", "'++'", "'--'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IF", "ELSIF", "ELSE", "END", "WHILE", 
                      "FOR", "IN", "DO", "PUTS", "GETS", "NOT", "AND_WORD", 
                      "OR_WORD", "AND_SYM", "OR_SYM", "OP_INC", "OP_DEC", 
                      "OP_ADD", "OP_MUL", "OP_REL", "OP_NOT", "RANGE", "ID", 
                      "NUM", "STRING", "WS" ]

    RULE_programa = 0
    RULE_comando = 1
    RULE_escrita = 2
    RULE_leitura = 3
    RULE_atribuicao = 4
    RULE_condicional = 5
    RULE_corpo_if = 6
    RULE_enquanto = 7
    RULE_laco_para = 8
    RULE_intervalo = 9
    RULE_incremento = 10
    RULE_condicao = 11
    RULE_expressao = 12
    RULE_logico_baixo = 13
    RULE_logico_baixo_suf = 14
    RULE_not_baixo = 15
    RULE_logico_alto = 16
    RULE_logico_alto_suf = 17
    RULE_rel = 18
    RULE_soma = 19
    RULE_mult = 20
    RULE_unario = 21
    RULE_primario = 22

    ruleNames =  [ "programa", "comando", "escrita", "leitura", "atribuicao", 
                   "condicional", "corpo_if", "enquanto", "laco_para", "intervalo", 
                   "incremento", "condicao", "expressao", "logico_baixo", 
                   "logico_baixo_suf", "not_baixo", "logico_alto", "logico_alto_suf", 
                   "rel", "soma", "mult", "unario", "primario" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    IF=5
    ELSIF=6
    ELSE=7
    END=8
    WHILE=9
    FOR=10
    IN=11
    DO=12
    PUTS=13
    GETS=14
    NOT=15
    AND_WORD=16
    OR_WORD=17
    AND_SYM=18
    OR_SYM=19
    OP_INC=20
    OP_DEC=21
    OP_ADD=22
    OP_MUL=23
    OP_REL=24
    OP_NOT=25
    RANGE=26
    ID=27
    NUM=28
    STRING=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PubyParser.EOF, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PubyParser.ComandoContext)
            else:
                return self.getTypedRuleContext(PubyParser.ComandoContext,i)


        def getRuleIndex(self):
            return PubyParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = PubyParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134227488) != 0):
                self.state = 46
                self.comando()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(PubyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def escrita(self):
            return self.getTypedRuleContext(PubyParser.EscritaContext,0)


        def leitura(self):
            return self.getTypedRuleContext(PubyParser.LeituraContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(PubyParser.AtribuicaoContext,0)


        def condicional(self):
            return self.getTypedRuleContext(PubyParser.CondicionalContext,0)


        def enquanto(self):
            return self.getTypedRuleContext(PubyParser.EnquantoContext,0)


        def laco_para(self):
            return self.getTypedRuleContext(PubyParser.Laco_paraContext,0)


        def incremento(self):
            return self.getTypedRuleContext(PubyParser.IncrementoContext,0)


        def getRuleIndex(self):
            return PubyParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = PubyParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.escrita()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.leitura()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.atribuicao()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.condicional()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 58
                self.enquanto()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 59
                self.laco_para()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 60
                self.incremento()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscritaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUTS(self):
            return self.getToken(PubyParser.PUTS, 0)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PubyParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(PubyParser.ExpressaoContext,i)


        def getRuleIndex(self):
            return PubyParser.RULE_escrita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscrita" ):
                listener.enterEscrita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscrita" ):
                listener.exitEscrita(self)




    def escrita(self):

        localctx = PubyParser.EscritaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_escrita)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(PubyParser.PUTS)
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 64
                self.expressao()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 65
                    self.match(PubyParser.T__0)
                    self.state = 66
                    self.expressao()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PubyParser.ID, 0)

        def GETS(self):
            return self.getToken(PubyParser.GETS, 0)

        def getRuleIndex(self):
            return PubyParser.RULE_leitura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeitura" ):
                listener.enterLeitura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeitura" ):
                listener.exitLeitura(self)




    def leitura(self):

        localctx = PubyParser.LeituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_leitura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(PubyParser.ID)
            self.state = 75
            self.match(PubyParser.T__1)
            self.state = 76
            self.match(PubyParser.GETS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PubyParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(PubyParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return PubyParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)




    def atribuicao(self):

        localctx = PubyParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(PubyParser.ID)
            self.state = 79
            self.match(PubyParser.T__1)
            self.state = 80
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PubyParser.IF, 0)

        def condicao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PubyParser.CondicaoContext)
            else:
                return self.getTypedRuleContext(PubyParser.CondicaoContext,i)


        def corpo_if(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PubyParser.Corpo_ifContext)
            else:
                return self.getTypedRuleContext(PubyParser.Corpo_ifContext,i)


        def END(self):
            return self.getToken(PubyParser.END, 0)

        def ELSIF(self, i:int=None):
            if i is None:
                return self.getTokens(PubyParser.ELSIF)
            else:
                return self.getToken(PubyParser.ELSIF, i)

        def ELSE(self):
            return self.getToken(PubyParser.ELSE, 0)

        def getRuleIndex(self):
            return PubyParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)




    def condicional(self):

        localctx = PubyParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PubyParser.IF)
            self.state = 83
            self.condicao()
            self.state = 84
            self.corpo_if()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 85
                self.match(PubyParser.ELSIF)
                self.state = 86
                self.condicao()
                self.state = 87
                self.corpo_if()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 94
                self.match(PubyParser.ELSE)
                self.state = 95
                self.corpo_if()


            self.state = 98
            self.match(PubyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Corpo_ifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PubyParser.ComandoContext)
            else:
                return self.getTypedRuleContext(PubyParser.ComandoContext,i)


        def getRuleIndex(self):
            return PubyParser.RULE_corpo_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorpo_if" ):
                listener.enterCorpo_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorpo_if" ):
                listener.exitCorpo_if(self)




    def corpo_if(self):

        localctx = PubyParser.Corpo_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_corpo_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134227488) != 0):
                self.state = 100
                self.comando()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnquantoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PubyParser.WHILE, 0)

        def condicao(self):
            return self.getTypedRuleContext(PubyParser.CondicaoContext,0)


        def END(self):
            return self.getToken(PubyParser.END, 0)

        def DO(self):
            return self.getToken(PubyParser.DO, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PubyParser.ComandoContext)
            else:
                return self.getTypedRuleContext(PubyParser.ComandoContext,i)


        def getRuleIndex(self):
            return PubyParser.RULE_enquanto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnquanto" ):
                listener.enterEnquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnquanto" ):
                listener.exitEnquanto(self)




    def enquanto(self):

        localctx = PubyParser.EnquantoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_enquanto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PubyParser.WHILE)
            self.state = 107
            self.condicao()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 108
                self.match(PubyParser.DO)


            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134227488) != 0):
                self.state = 111
                self.comando()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(PubyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Laco_paraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PubyParser.FOR, 0)

        def ID(self):
            return self.getToken(PubyParser.ID, 0)

        def IN(self):
            return self.getToken(PubyParser.IN, 0)

        def intervalo(self):
            return self.getTypedRuleContext(PubyParser.IntervaloContext,0)


        def END(self):
            return self.getToken(PubyParser.END, 0)

        def DO(self):
            return self.getToken(PubyParser.DO, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PubyParser.ComandoContext)
            else:
                return self.getTypedRuleContext(PubyParser.ComandoContext,i)


        def getRuleIndex(self):
            return PubyParser.RULE_laco_para

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLaco_para" ):
                listener.enterLaco_para(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLaco_para" ):
                listener.exitLaco_para(self)




    def laco_para(self):

        localctx = PubyParser.Laco_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_laco_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(PubyParser.FOR)
            self.state = 120
            self.match(PubyParser.ID)
            self.state = 121
            self.match(PubyParser.IN)
            self.state = 122
            self.intervalo()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 123
                self.match(PubyParser.DO)


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134227488) != 0):
                self.state = 126
                self.comando()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(PubyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntervaloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PubyParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(PubyParser.ExpressaoContext,i)


        def RANGE(self):
            return self.getToken(PubyParser.RANGE, 0)

        def getRuleIndex(self):
            return PubyParser.RULE_intervalo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntervalo" ):
                listener.enterIntervalo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntervalo" ):
                listener.exitIntervalo(self)




    def intervalo(self):

        localctx = PubyParser.IntervaloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_intervalo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.expressao()
            self.state = 135
            self.match(PubyParser.RANGE)
            self.state = 136
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncrementoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PubyParser.ID, 0)

        def OP_INC(self):
            return self.getToken(PubyParser.OP_INC, 0)

        def OP_DEC(self):
            return self.getToken(PubyParser.OP_DEC, 0)

        def getRuleIndex(self):
            return PubyParser.RULE_incremento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncremento" ):
                listener.enterIncremento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncremento" ):
                listener.exitIncremento(self)




    def incremento(self):

        localctx = PubyParser.IncrementoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_incremento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(PubyParser.ID)
            self.state = 139
            _la = self._input.LA(1)
            if not(_la==20 or _la==21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(PubyParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return PubyParser.RULE_condicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicao" ):
                listener.enterCondicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicao" ):
                listener.exitCondicao(self)




    def condicao(self):

        localctx = PubyParser.CondicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logico_baixo(self):
            return self.getTypedRuleContext(PubyParser.Logico_baixoContext,0)


        def getRuleIndex(self):
            return PubyParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)




    def expressao(self):

        localctx = PubyParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.logico_baixo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logico_baixoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_baixo(self):
            return self.getTypedRuleContext(PubyParser.Not_baixoContext,0)


        def logico_baixo_suf(self):
            return self.getTypedRuleContext(PubyParser.Logico_baixo_sufContext,0)


        def getRuleIndex(self):
            return PubyParser.RULE_logico_baixo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogico_baixo" ):
                listener.enterLogico_baixo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogico_baixo" ):
                listener.exitLogico_baixo(self)




    def logico_baixo(self):

        localctx = PubyParser.Logico_baixoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_logico_baixo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.not_baixo()
            self.state = 146
            self.logico_baixo_suf()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logico_baixo_sufContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND_WORD(self):
            return self.getToken(PubyParser.AND_WORD, 0)

        def not_baixo(self):
            return self.getTypedRuleContext(PubyParser.Not_baixoContext,0)


        def logico_baixo_suf(self):
            return self.getTypedRuleContext(PubyParser.Logico_baixo_sufContext,0)


        def OR_WORD(self):
            return self.getToken(PubyParser.OR_WORD, 0)

        def getRuleIndex(self):
            return PubyParser.RULE_logico_baixo_suf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogico_baixo_suf" ):
                listener.enterLogico_baixo_suf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogico_baixo_suf" ):
                listener.exitLogico_baixo_suf(self)




    def logico_baixo_suf(self):

        localctx = PubyParser.Logico_baixo_sufContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_logico_baixo_suf)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(PubyParser.AND_WORD)
                self.state = 149
                self.not_baixo()
                self.state = 150
                self.logico_baixo_suf()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(PubyParser.OR_WORD)
                self.state = 153
                self.not_baixo()
                self.state = 154
                self.logico_baixo_suf()
                pass
            elif token in [-1, 1, 4, 5, 6, 7, 8, 9, 10, 12, 13, 26, 27]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Not_baixoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(PubyParser.NOT, 0)

        def not_baixo(self):
            return self.getTypedRuleContext(PubyParser.Not_baixoContext,0)


        def logico_alto(self):
            return self.getTypedRuleContext(PubyParser.Logico_altoContext,0)


        def getRuleIndex(self):
            return PubyParser.RULE_not_baixo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot_baixo" ):
                listener.enterNot_baixo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot_baixo" ):
                listener.exitNot_baixo(self)




    def not_baixo(self):

        localctx = PubyParser.Not_baixoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_not_baixo)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(PubyParser.NOT)
                self.state = 160
                self.not_baixo()
                pass
            elif token in [3, 22, 25, 27, 28, 29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.logico_alto()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logico_altoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rel(self):
            return self.getTypedRuleContext(PubyParser.RelContext,0)


        def logico_alto_suf(self):
            return self.getTypedRuleContext(PubyParser.Logico_alto_sufContext,0)


        def getRuleIndex(self):
            return PubyParser.RULE_logico_alto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogico_alto" ):
                listener.enterLogico_alto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogico_alto" ):
                listener.exitLogico_alto(self)



